write instructions for lambda

--- a/Tutorial/ModelViewController/Kontroller/task-info.yaml
+++ b/Tutorial/ModelViewController/Kontroller/task-info.yaml
@@ -15,9 +15,10 @@ files:
     length: 32
     placeholder_text: /* TODO register on the event "onUp" from the button the function
       "ledOff" of the controller */
-  - offset: 1602
+  - offset: 2137
     length: 85
-    placeholder_text: /* TODO create a listener on the "ledGlows" of the model, and toggle the led */
+    placeholder_text: "/* TODO create a listener on the \"ledGlows\" of the model,\
+      \ and toggle the led */"
 - name: src/view/components/helpers/PIN.java
   visible: false
 - name: src/view/components/Component.java
