corrected grammar errors, hiding pics

--- a/Tutorial/Einführung/RunConfiguration/task-info.yaml
+++ b/Tutorial/Einführung/RunConfiguration/task-info.yaml
@@ -5,6 +5,6 @@ files:
 - name: RunConfiguration.png
   visible: false
 - name: EnterEditRunConfiguration.png
-  visible: true
+  visible: false
 - name: EditRunConfiguration.png
-  visible: true
+  visible: false
