--- a/Tutorial/Erste Komponente/Validierung/task-info.yaml
+++ b/Tutorial/Erste Komponente/Validierung/task-info.yaml
@@ -1,11 +1,11 @@
 type: choice
 is_multiple_choice: true
 options:
-- text: Ich kenne den groben Inhalt des Hardwarekataloges und weiss, wie ich diesen
-    in meinem Projekt einsetzen kann.
+- text: "Ich kenne den groben Inhalt des Hardwarekataloges und weiss, wie ich diesen\
+    \ in meinem Projekt einsetzen kann."
   is_correct: true
-- text: Ich weiss, wo ich im Hardwarekatalog Hilfe zur elektrischen Montage der Bauteile
-    bekomme.
+- text: "Ich weiss, wo ich im Hardwarekatalog Hilfe zur elektrischen Montage der Bauteile\
+    \ bekomme."
   is_correct: true
 - text: Ich kenne die Funktionen von SimpleLED und SimpleButton und kann diese in
     einer einfache Applikation verwenden.
@@ -15,3 +15,4 @@ options:
 files:
 - name: src/Main.java
   visible: true
+local_check: true
