--- a/Tutorial/Eigenes Projekt/Projektstart/task-info.yaml
+++ b/Tutorial/Eigenes Projekt/Projektstart/task-info.yaml
@@ -2,3 +2,5 @@ type: theory
 files:
 - name: src/Main.java
   visible: true
+- name: runConfigurations/EigenesProjekt-Projektstart.run.xml
+  visible: false
