--- a/Tutorial/Eigenes Projekt/Projektstart/task-info.yaml
+++ b/Tutorial/Eigenes Projekt/Projektstart/task-info.yaml
@@ -3,4 +3,4 @@ files:
 - name: src/Main.java
   visible: true
 - name: runConfigurations/EigenesProjekt-Projektstart.run.xml
-  visible: false
+  visible: true
