cleanup, checking links

--- a/Tutorial/Einführung/EducationalTask/task-info.yaml
+++ b/Tutorial/Einführung/EducationalTask/task-info.yaml
@@ -5,7 +5,7 @@ files:
   placeholders:
   - offset: 213
     length: 25
-    placeholder_text: "/*TODO: Print \"Hello world, hello LEITFADEN\" to console */"
+    placeholder_text: /* TODO Print "Hello world, hello LEITFADEN" to console */
 - name: PeakSolution.png
   visible: false
 - name: test/output.txt
