--- a/Tutorial/Klassenmodifizierung/Implementation Klassenmodifizierung/task-info.yaml
+++ b/Tutorial/Klassenmodifizierung/Implementation Klassenmodifizierung/task-info.yaml
@@ -1,5 +1,11 @@
 type: edu
 files:
+- name: src/Switch.java
+  visible: true
+  placeholders:
+  - offset: 350
+    length: 3220
+    placeholder_text: /* TODO Create the class*/
 - name: src/Main.java
   visible: true
   placeholders:
@@ -12,18 +18,12 @@ files:
   - offset: 1910
     length: 24
     placeholder_text: /* TODO deregister all functions from the switch */
-- name: src/Switch.java
-  visible: true
-  placeholders:
-  - offset: 350
-    length: 3220
-    placeholder_text: /* TODO Create the class*/
 - name: src/SimpleButton.java
   visible: true
 - name: src/Component.java
   visible: false
 - name: src/PIN.java
-  visible: true
+  visible: false
 - name: test/SwitchTest.java
   visible: false
 - name: test/ComponentTest.java
