--- a/Tutorial/ModelViewController/Validierung/task-info.yaml
+++ b/Tutorial/ModelViewController/Validierung/task-info.yaml
@@ -4,7 +4,7 @@ options:
 - text: Ich kenne das Design pattern MVC.
   is_correct: true
 - text: Ich kenne die verschiedenen Layer und weiss, welche Funktionen diese übernehmen.
-  is_correct: false
+  is_correct: true
 - text: Ich kann eine bestehende MVC Applikation mit eigenen Komponenten erweitern
   is_correct: true
 files:
