--- a/Tutorial/Klassenmodifizierung/Implementation Klassenwiederverwendung/task-info.yaml
+++ b/Tutorial/Klassenmodifizierung/Implementation Klassenwiederverwendung/task-info.yaml
@@ -1,40 +1,35 @@
 type: edu
 files:
+- name: src/LedButton.java
+  visible: true
+  placeholders:
+  - offset: 278
+    length: 71
+    placeholder_text: /* TODO declare the objects button and led */
+  - offset: 636
+    length: 127
+    placeholder_text: /* TODO initialize the objects button and led */
+  - offset: 775
+    length: 347
+    placeholder_text: /* TODO create the led functions on the ledbutton */
+  - offset: 1128
+    length: 814
+    placeholder_text: /* TODO create the button functions on the ledbutton */
 - name: src/Main.java
   visible: true
 - name: src/SimpleButton.java
   visible: true
 - name: src/PIN.java
-  visible: true
+  visible: false
 - name: src/Component.java
   visible: false
 - name: src/SimpleLED.java
   visible: true
-- name: src/LEDButton.java
-  visible: true
-  placeholders:
-  - offset: 329
-    length: 71
-    placeholder_text: /* TODO Deklariere zwei Objekte led und button mit SimpleLed
-      und SimpleButton */
-  - offset: 687
-    length: 127
-    placeholder_text: /* TODO Initialisiere die beiden Objekte */
-  - offset: 826
-    length: 363
-    placeholder_text: /* TODO Schreibe die Methoden zum Led Teil von LedButton, benutze
-      dazu die Methoden vom Objekt led */
-  - offset: 1195
-    length: 814
-    placeholder_text: /* TODO Schreibe die Methoden zum Button Teil von LedButton,
-      benutze dazu die Methoden vom Objekt button */
 - name: test/LEDButtonTest.java
   visible: false
 - name: test/ComponentTest.java
   visible: false
 - name: src/Klassenmodifizierung-ImplementationWiederverwendung.run.xml
   visible: false
-- name: src/LedButton.java
-  visible: true
 - name: src/SimpleLed.java
   visible: true
