--- a/Tutorial/PI4J-Umgebung/Shutdownimplementation/task-info.yaml
+++ b/Tutorial/PI4J-Umgebung/Shutdownimplementation/task-info.yaml
@@ -5,20 +5,20 @@ files:
 - name: src/Main.java
   visible: true
   placeholders:
+  - offset: 499
+    length: 381
+    placeholder_text: /* TODO create the context */
   - offset: 1547
     length: 23
     placeholder_text: /* TODO deregister the functions of the button */
   - offset: 1682
     length: 16
     placeholder_text: /* TODO shutdown the context */
-  - offset: 499
-    length: 381
-    placeholder_text: /* TODO create the context */
 - name: src/PIN.java
   visible: false
 - name: src/Component.java
   visible: false
 - name: src/SimpleButton.java
   visible: true
-- name: src/Einführung-PI4J-Shutdownimplementation.run.xml
-  visible: false
+- name: src/PI4J-Umgebung-Shutdownimplementation.run.xml
+  visible: true
