--- a/Tutorial/PI4J-Umgebung/Standardcontext/task-info.yaml
+++ b/Tutorial/PI4J-Umgebung/Standardcontext/task-info.yaml
@@ -12,7 +12,7 @@ files:
   visible: false
 - name: src/Component.java
   visible: false
-- name: src/Einführung-PI4J-Standardcontext.run.xml
-  visible: false
 - name: src/SimpleLed.java
+  visible: true
+- name: src/PI4J-Umgebung-Standardcontext.run.xml
   visible: true
