--- a/Tutorial/Erste Komponente/Selbsteinschätzung/task-info.yaml
+++ b/Tutorial/Erste Komponente/Selbsteinschätzung/task-info.yaml
@@ -5,8 +5,8 @@ options:
   is_correct: false
 - text: Der Hardwarekatalog besitzt auch Verdrahtungsschemas.
   is_correct: true
-- text: Um eine LED aus dem Starterkit anzusteuern braucht es keinen Widerstand.
-  is_correct: false
+- text: Um eine LED aus dem Starterkit anzusteuern braucht es Widerstand.
+  is_correct: true
 - text: Um eine projektspezifische Funktion aufzurufen, wenn der Button gedrückt wird, muss die Klasse Button angepasst werden.
   is_correct: false
 files:
