--- a/Tutorial/Einführung/Hint/task-info.yaml
+++ b/Tutorial/Einführung/Hint/task-info.yaml
@@ -1,9 +1,9 @@
 type: choice
 is_multiple_choice: false
 options:
-- text: Richtig
+- text: 13845
   is_correct: true
-- text: Falsch
+- text: 12986
   is_correct: false
 files:
 - name: src/Main.java
