--- a/Tutorial/Erste Komponente/Selbsteinschätzung/task-info.yaml
+++ b/Tutorial/Erste Komponente/Selbsteinschätzung/task-info.yaml
@@ -5,7 +5,7 @@ options:
   is_correct: false
 - text: Der Hardwarekatalog besitzt auch Verdrahtungsschemas.
   is_correct: true
-- text: Um eine LED aus dem Starterkit anzusteuern braucht es Widerstand.
+- text: Um eine LED aus dem Starterkit anzusteuern braucht es einen Widerstand.
   is_correct: true
 - text: Um eine projektspezifische Funktion aufzurufen, wenn der Button gedrückt wird, muss die Klasse Button angepasst werden.
   is_correct: false
