--- a/Tutorial/ModelViewController/Zusammenfassung/task-info.yaml
+++ b/Tutorial/ModelViewController/Zusammenfassung/task-info.yaml
@@ -2,5 +2,5 @@ type: theory
 files:
 - name: src/Main.java
   visible: true
-- name: src/mvc-concept.png
-  visible: false
+- name: mvc-concept.png
+  visible: true
