--- a/Tutorial/Erste Komponente/Implementation LED/task-info.yaml
+++ b/Tutorial/Erste Komponente/Implementation LED/task-info.yaml
@@ -3,17 +3,17 @@ files:
 - name: src/Main.java
   visible: true
   placeholders:
-  - offset: 1706
-    length: 47
-    placeholder_text: /* TODO declare and initialize an object led of SimpleLED. Use Pin
-      PWM 19  */
-  - offset: 1814
+  - offset: 1648
+    length: 44
+    placeholder_text: /* TODO declare and initialize an object led of SimpleLED. Use
+      Pin PWM 19  */
+  - offset: 1753
     length: 9
     placeholder_text: /* TODO turn on LED */
-  - offset: 1912
-    length: 116
+  - offset: 1859
+    length: 111
     placeholder_text: /* TODO Create flashing light */
-  - offset: 2091
+  - offset: 2023
     length: 10
     placeholder_text: /* TODO Turn off led */
 - name: test/Tests.java
@@ -25,4 +25,6 @@ files:
 - name: src/SimpleLed.java
   visible: true
 - name: src/ErsteKomponente-ImplementationLED.run.xml
+  visible: false
+- name: src/DigitalActuator.java
   visible: false
