--- a/settings.gradle
+++ b/settings.gradle
@@ -21,3 +21,6 @@ rootProject.projectDir.eachDirRecurse {
 def isTaskDir(File dir) {
     return new File(dir, "src").exists()
 }
+
+include 'shared'
+
