--- a/Tutorial/Klassenmodifizierung/Selbsteinschätzung/task-info.yaml
+++ b/Tutorial/Klassenmodifizierung/Selbsteinschätzung/task-info.yaml
@@ -3,14 +3,16 @@ is_multiple_choice: true
 options:
 - text: Objekte bestehen aus Daten und Verhalten.
   is_correct: true
-- text: Klassen sind Exemplare, Objekte sind der Bauplan.
+- text: "Klassen sind Exemplare, Objekte sind der Bauplan."
   is_correct: false
 - text: Der Default-Konstruktor kann overloaded werden.
   is_correct: true
-- text: this zeigt immer auf das Objekt, in dem sich die Methode befindet, die gerade ausgeführt wird.
+- text: "this zeigt immer auf das Objekt, in dem sich die Methode befindet, die gerade\
+    \ ausgeführt wird."
   is_correct: true
 - text: Encapsulation speichert die Eigenschaften / den Zustand des Objektes.
   is_correct: false
 files:
 - name: src/Main.java
   visible: true
+local_check: true
