--- a/Tutorial/PI4J-Umgebung/Selbsteinschätzung/task-info.yaml
+++ b/Tutorial/PI4J-Umgebung/Selbsteinschätzung/task-info.yaml
@@ -7,10 +7,12 @@ options:
   is_correct: false
 - text: linie 27 - LinuxFs ist einer von Zwei Providern
   is_correct: true
-- text: Der Context enthält den konfigurierten Zustand und den Lebenszyklus einer Pi4J-Instanz
+- text: Der Context enthält den konfigurierten Zustand und den Lebenszyklus einer
+    Pi4J-Instanz
   is_correct: true
 - text: Nur das löschen des Context gibt dessen Ressourcen frei
   is_correct: false
 files:
 - name: src/Main.java
   visible: true
+local_check: true
