--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -12,4 +12,13 @@ dependencies {
     implementation 'com.pi4j:pi4j-plugin-pigpio:2.3.0'
     implementation 'com.pi4j:pi4j-plugin-mock:2.3.0'
     implementation 'com.pi4j:pi4j-plugin-linuxfs:2.3.0'
+
+    testImplementation('org.junit.jupiter:junit-jupiter:5.10.0')
+}
+
+test {
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
