--- a/Tutorial/Klassenmodifizierung/Wiederverwendbarkeit/task-info.yaml
+++ b/Tutorial/Klassenmodifizierung/Wiederverwendbarkeit/task-info.yaml
@@ -2,13 +2,11 @@ type: theory
 files:
 - name: src/Main.java
   visible: false
-- name: src/Component.java
-  visible: false
-- name: src/PIN.java
-  visible: false
-- name: src/SimpleButton.java
-  visible: false
-- name: src/SimpleLED.java
-  visible: false
 - name: src/LedButton.java
+  visible: true
+- name: build.gradle
+  visible: true
+- name: src/SimpleLed.java
+  visible: true
+- name: src/SimpleButton.java
   visible: true
