--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ subprojects {
     apply plugin: 'java'
 
     sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 
     repositories {
         mavenCentral()
