'Eigenes Projekt' wip

--- a/Tutorial/Eigenes Projekt/Schema/task-info.yaml
+++ b/Tutorial/Eigenes Projekt/Schema/task-info.yaml
@@ -3,7 +3,7 @@ is_multiple_choice: true
 options:
 - text: Dieses Schema wird funktionieren.
   is_correct: false
-- text: Die Grüne LED kann nie gesteuert werden.
+- text: Die grüne LED kann nie gesteuert werden.
   is_correct: true
 - text: "Die Anordnung der Komponenten ist nicht vorteilhaft, besser wäre es, wenn\
     \ die Buttons direkt neben ihren LED platziert wären."
