--- a/Tutorial/ModelViewController/Model/task-info.yaml
+++ b/Tutorial/ModelViewController/Model/task-info.yaml
@@ -1,49 +1,62 @@
 type: edu
 files:
-- name: src/AppStarter.java
-  visible: true
-- name: src/view/View.java
-  visible: true
-  placeholders:
-  - offset: 394
-    length: 30
-    placeholder_text: /* TODO declare the LedButton */
-  - offset: 647
-    length: 59
-    placeholder_text: /* TODO initialize the LedButton */
-  - offset: 822
-    length: 18
-    placeholder_text: /* TODO implement the Shutdown */
-  - offset: 1038
-    length: 87
-    placeholder_text: /* TODO connect the interactions from the button with the function
-      of the controller */
-  - offset: 1408
-    length: 105
-    placeholder_text: "/* TODO give out the message stored in the model to the console,\
+  - name: src/AppStarter.java
+    visible: true
+  - name: src/view/View.java
+    visible: true
+    placeholders:
+      - offset: 394
+        length: 30
+        placeholder_text: /* TODO declare the LedButton */
+      - offset: 647
+        length: 59
+        placeholder_text: /* TODO initialize the LedButton */
+      - offset: 822
+        length: 18
+        placeholder_text: /* TODO implement the Shutdown */
+      - offset: 1038
+        length: 87
+        placeholder_text: /* TODO connect the interactions from the button with the function
+          of the controller */
+      - offset: 1408
+        length: 105
+        placeholder_text: "/* TODO give out the message stored in the model to the console,\
       \ when the message changes */"
-- name: src/model/Model.java
-  visible: true
-  placeholders:
-  - offset: 346
-    length: 105
-    placeholder_text: /* TODO create an Observable of type String with the name "message"
-      */
-- name: src/controller/Controller.java
-  visible: true
-  placeholders:
-  - offset: 403
-    length: 89
-    placeholder_text: /* TODO refresh the model with the new message */
-- name: src/ModelViewController-Model.run.xml
-  visible: false
-- name: build.gradle
-  visible: true
-- name: src/view/components/SimpleLed.java
-  visible: true
-- name: src/view/components/SimpleButton.java
-  visible: true
-- name: src/view/components/LedButton.java
-  visible: true
-- name: test/controller/ControllerTest.java
-  visible: true
+      - offset: 1659
+        length: 18
+        placeholder_text: /* TODO  led anschalten */
+      - offset: 1731
+        length: 19
+        placeholder_text: /* TODO LED ausschalten */
+  - name: src/model/Model.java
+    visible: true
+    placeholders:
+      - offset: 346
+        length: 105
+        placeholder_text: /* TODO create an Observable of type String with the name "message"
+          */
+  - name: src/controller/Controller.java
+    visible: true
+    placeholders:
+      - offset: 403
+        length: 89
+        placeholder_text: /* TODO refresh the model with the new message */
+  - name: src/ModelViewController-Model.run.xml
+    visible: false
+  - name: build.gradle
+    visible: true
+  - name: src/view/components/SimpleLed.java
+    visible: true
+  - name: src/view/components/SimpleButton.java
+    visible: true
+  - name: src/view/components/LedButton.java
+    visible: true
+  - name: test/controller/ControllerTest.java
+    visible: true
+    placeholders:
+      - offset: 799
+        length: 57
+        placeholder_text: /* TODO test if 'message' in 'model' is updated correctly*/
+      - offset: 1253
+        length: 57
+        placeholder_text: /* TODO  test if 'message' in 'model' is updated correctly*/
